# ai-microcore

./: .env.anthropic.example  .env.azure-openai-entra-id.example  .env.claude-code.example  .env.example  .env.gemini-cli.example  .env.gemini.example  .env.google-vertex-gemini.example  .env.mistral.example  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ai-code-review.yml  gito-code-review.yml  gito-react-to-comments.yml  pylint.yml  pypi-release.yml  python-package.yml  tests.yml
.gito/: config.toml
doc/features/: file_cache.md  http_headers.md
examples/: app.py  azure_entra_smoke.py  basic.py  generate_meme_image.py  joke.py  mcp_1shot_github_stars.py  mcp_1shot_github_starts.py  mcp_agent_loop.py  mcp_tool_call_time.py  pytorch_transformers.py  streaming.py  telegram-bot-aiogram-advanced.py  telegram-bot-telebot-memory.py  telegram-bot-telebot-simplest.py  telegram-bot-telebot.py  web-chat-flask.py
examples/ask_various_llms_via_mcp/: .env.template  README.md  ask_various_llms_mcp_server.py  claude_desktop_config.json  query_mcp.py  requirements.txt
examples/code-review-tool/: app.py
examples/code-review-tool/tpl/: code-review.j2
microcore/: __init__.py  _env.py  _llm_functions.py  _prepare_llm_args.py  ai_modules.py  config.py  configuration.py  console.py  decorators.py  env.py  ext.py  extended_string.py  file_cache.py  file_storage.py  fs.py  images.py  interactive_setup.py  internal_env.py  json_parsing.py  llm_backends.py  llm_functions.py  lm_client.py  logging.py  logging_patch.py  mcp.py  message_types.py  metrics.py  openai.py  openai_chat.py  prepare_llm_args.py  presets.py  python.py  storage.py  tokenizing.py  types.py  ui.py  use.py  use_llm_logging.py  utils.py
microcore/ai_func/: __init__.py  ai-func.json.j2  ai-func.pythonic.j2  ai-func.tag.j2  python_ai_func.j2
microcore/embedding_db/: __init__.py  base.py  chromadb.py  qdrant.py
microcore/llm/: _openai_llm_v0.py  _openai_llm_v1.py  anthropic.py  cli.py  google_genai.py  google_vertex_ai.py  local_llm.py  local_transformers.py  openai.py  openai_llm.py  shared.py
microcore/templating/: jinja2.py
microcore/text2speech/: elevenlabs.py
microcore/wrappers/: llm_response_wrapper.py  prompt_wrapper.py
requirements/: dev.txt  extended.txt  min.txt  tests.txt
tests/apis/: __init__.py  setup_env.py  test_calc.py  test_stream_parameter.py  test_streaming.py  test_streaming_async.py  test_word.py
tests/basic/: __init__.py  test_cli_llm.py  test_config.py  test_config_validate.py  test_configure_from_file_local_func.py  test_convert_exceptions.py  test_env.py  test_extract_block.py  test_extract_tags.py  test_file_cache.py  test_fit_vector_search_to_tokens.py  test_levenshtein.py  test_llm.py  test_llm_backends.py  test_logging.py  test_mcp.py  test_mcp_header_auth.py  test_mcp_invalid_server.py  test_mcp_ping_server.py  test_metrics.py  test_model_names.py  test_most_similar.py  test_parse.py  test_parse_json.py  test_prepare_chat_messages.py  test_python.py  test_resolve_callable.py  test_role.py  test_role_enum.py  test_ssearch.py  test_storage.py  test_templating.py  test_tojson.py  test_tpl.py  test_ui.py  test_utils.py  test_utils_extended_string.py  test_validate_config.py  test_vectordb_clear.py  test_wrappers.py
tests/basic/config/: custom_func.ini
tests/basic/fixtures/: CapsFixture.py
tests/basic/mcp_servers/: ping_server.py
tests/basic/tpl/: answer_with_json.j2  json_data.j2  test.j2
tests/basic/tpl/sub-folder/: tpl.j2
tests/extended/: Readme.md  test_mcp_time.py
tests/local/: test_transformers.py
