[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai-microcore"
dynamic = ["description", "version"]
keywords = [
    "llm",
    "large language models",
    "ai",
    "similarity search",
    "ai search",
    "gpt",
    "openai",
    "framework",
    "adapter",
    "anthropic",
    "google gemini",
    "google vertex ai",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "openai>=0.28.1,<2",
    "python-dotenv~=1.1.0",
    "Jinja2~=3.1.2",
    "colorama~=0.4.6",
    "PyYAML~=6.0",
    "chardet~=5.2.0",
    "tiktoken>=0.7.0,<1.0",
    "mcp>=1.10.1,<2.0",
    "fastmcp>=2.10.2,<3.0",
    "docstring_parser~=0.16.0",
    "httpx~=0.28.1"
]
requires-python = ">=3.10"

authors = [
    { name = "Vitalii Stepanenko", email = "mail@vitaliy.in" },
]
maintainers = [
    { name = "Vitalii Stepanenko", email = "mail@vitaliy.in" },
]
license = { file = "LICENSE" }

[project.urls]
"Source Code" = "https://github.com/Nayjest/ai-microcore"
"Bug Tracker" = "https://github.com/Nayjest/ai-microcore/issues"

[tool.flit.module]
name = "microcore"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--cov=microcore --cov-report=xml:coverage.xml --cov-report=term"
addopts = "-vv --capture=no --log-cli-level=INFO"
testpaths = [
    "tests/basic",
]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]
